--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <nav class="main-nav">
         <ul class="main-nav-list">
           <li><a class="main-nav-link" href="#">Početna strana</a></li>
-          <li><a class="main-nav-link" href="#">Sela</a>
-          <li><a class="main-nav-link" href="#">Planine</a></li>
+          <li><a class="main-nav-link" href="#Sela">Sela</a>
+          <li><a class="main-nav-link" href="planine.html">Planine</a></li>
           <li><a class="main-nav-link" href="#footer">O nama</a></li>
           <li><a class="main-nav-link nav-cta" href="#footer">Kontaktirajte nas</a></li>
         </ul>
@@ -262,7 +262,7 @@ Iz njega izvire Mlinski potok od kojeg kad se spoji sa Šatorskim potokom nastaj
     <div class="container grid grid--footer">
       <div class="logo-col">
         <a href="#" class="footer-logo">
-          <img class="logo" alt="Omnifood logo" src="img/nature/logo-vektor.obrada.png" />
+          <img class="logo" alt="Ognjište Bosansko Grahovo logo" src="img/nature/logo-vektor.obrada.png" />
         </a>
 
         <ul class="social-links">
