--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="bootstrap-5.1.3-dist/js/bootstrap.js"></script>
     
+
+
+    
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="function.js">
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule=""
+      src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.js"
+    ></script>
+
+    <script
+      defer
+      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
+    ></script>
 
     <title>Ognjište Bosansko Grahovo</title>
   </head>
@@ -20,15 +38,19 @@
       <img class="logo" src="img/nature/logo-vektor.obrada.png" alt="Ognjište Bosansko Grahovo">
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">Početna strana</a></li>
-          <li><a class="main-nav-link" href="#Sela">Sela</a>
+          <li><a class="main-nav-link" href="index.html">Početna strana</a></li>
+          <li><a class="main-nav-link" href="sela.html">Grad i sela</a>
           <li><a class="main-nav-link" href="planine.html">Planine</a></li>
           <li><a class="main-nav-link" href="#footer">O nama</a></li>
           <li><a class="main-nav-link nav-cta" href="#footer">Kontaktirajte nas</a></li>
         </ul>
       </nav>
-  </header>
-
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>
+      </button>
+    </header>
+  
   <main>
     <section class="section-hero">
       <div class="hero">
